imgui-sdl3-sys/src/generated/sdl3_backend.rs

/* automatically generated by rust-bindgen 0.72.1 */

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]
#![allow(clippy::all)]
use super::*;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SDL_Window {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SDL_Renderer {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SDL_Gamepad {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForOpenGL(
        window: *mut SDL_Window,
        sdl_gl_context: *mut ::core::ffi::c_void,
    ) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForVulkan(window: *mut SDL_Window) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForD3D(window: *mut SDL_Window) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForMetal(window: *mut SDL_Window) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForSDLRenderer(
        window: *mut SDL_Window,
        renderer: *mut SDL_Renderer,
    ) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForSDLGPU(window: *mut SDL_Window) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_InitForOther(window: *mut SDL_Window) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_Shutdown();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_NewFrame();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_ProcessEvent(event: *const SDL_Event) -> bool;
}
pub const cImGui_ImplSDL3_GamepadMode_cImGui_ImplSDL3_GamepadMode_AutoFirst:
    cImGui_ImplSDL3_GamepadMode = 0;
pub const cImGui_ImplSDL3_GamepadMode_cImGui_ImplSDL3_GamepadMode_AutoAll:
    cImGui_ImplSDL3_GamepadMode = 1;
pub const cImGui_ImplSDL3_GamepadMode_cImGui_ImplSDL3_GamepadMode_Manual:
    cImGui_ImplSDL3_GamepadMode = 2;
pub type cImGui_ImplSDL3_GamepadMode = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn cImGui_ImplSDL3_SetGamepadMode(
        mode: cImGui_ImplSDL3_GamepadMode,
        manual_gamepads_array: *mut *mut SDL_Gamepad,
        manual_gamepads_count: ::core::ffi::c_int,
    );
}
